# unic

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  bors.toml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: cd.yml  ci.yml
config/: .editorconfig  cliff.toml  deny.toml  dprint.json
scripts/: install.sh  release.sh  remove.sh
src/: lib.rs
src/xcore/: core.rs
